feat : 중복 제거 코드 수정